--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     stages {
         stage('Git') {
             steps {
-                git url:'https://github.com/kopallesidh/Website-PRT-ORG' branch: 'main'
+                git url:'https://github.com/kopallesidh/Website-PRT-ORG', branch: 'main'
             }
         }
         stage('Docker') {
