--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,8 +13,8 @@ pipeline {
         stage('Docker') {
             steps {
                 sh 'sudo docker login -u ${DOCKERHUB_CREDENTIALS_USR} -p ${DOCKERHUB_CREDENTIALS_PSW}'
-                sh 'find $WORKSPACE -name Dockerfile'
-                sh 'sudo docker build -t sidhartha700/pet-task /home/ubuntu/jenkins/workspace/Test-PRT'
+                sh 'find ${WORKSPACE} -name Dockerfile'  // Helps confirm Dockerfile location
+                sh 'sudo docker build -t sidhartha700/pet-task ${WORKSPACE}'  // Dynamic path
                 sh 'sudo docker push sidhartha700/pet-task'
             }
         }
