--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,6 +14,9 @@ pipeline {
             steps {
                 sh 'sudo docker login -u ${DOCKERHUB_CREDENTIALS_USR} -p ${DOCKERHUB_CREDENTIALS_PSW}'
                 sh 'find $WORKSPACE -name Dockerfile'
+                sh "sudo docker build -t sidhartha700/pet-task $WORKSPACE"
+                sh 'sudo docker push sidhartha700/pet-task'
+
             }
         }
         stage('k8s') {
