--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,8 +13,7 @@ pipeline {
         stage('Docker') {
             steps {
                 sh 'sudo docker login -u ${DOCKERHUB_CREDENTIALS_USR} -p ${DOCKERHUB_CREDENTIALS_PSW}'
-                sh 'find $WORKSPACE -name Dockerfile'
-                sh "sudo docker build -t sidhartha700/pet-task $WORKSPACE"
+                sh 'sudo docker build -t sidhartha700/pet-task /home/ubuntu/jenkins/workspace/Test-PRT'
                 sh 'sudo docker push sidhartha700/pet-task'
 
             }
