--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
             steps {
                 sh 'sudo docker login -u ${DOCKERHUB_CREDENTIALS_USR} -p ${DOCKERHUB_CREDENTIALS_PSW}'
                 sh 'ls -l' // Optional debug
-                sh 'sudo docker build -t sidhartha700/pet-task -f Docker .'
+                sh 'sudo docker build -t sidhartha700/pet-task -f Dockerfile .'
                 sh 'sudo docker push sidhartha700/pet-task'
 
             }
